fixed visual non-wrapping for empty lines

--- a/demo-site/src/App.css
+++ b/demo-site/src/App.css
@@ -151,6 +151,11 @@
   /* width: 50%; */
 }
 
+.hidden {
+  visibility: hidden;
+}
+
+
 /* user input highlights */
 .hl-number {
 }
